--- a/maintenance.html
+++ b/maintenance.html
@@ -25,12 +25,12 @@
 <body class="relative h-screen w-screen bg-black text-white overflow-hidden">
 
   <!-- Background Image -->
- <img
-  src="https://raw.githubusercontent.com/artilleryjoe/irondillo-site/main/assets/Cyber-stasis.png"
-  alt="Cyberstasis Background"
-  class="absolute inset-0 w-full h-full object-contain opacity-30 -z-10"
-  style="filter: brightness(1.3);"
-/>
+  <img
+    src="/assets/Cyber-stasis.png"
+    alt="Cyberstasis Background"
+    class="absolute inset-0 w-full h-full object-contain opacity-30 -z-10"
+    style="filter: brightness(1.3);"
+  />
 
   <!-- Scrolling Matrix Text -->
   <div class="absolute z-20 w-full h-full flex flex-col items-center justify-center space-y-4 overflow-hidden">
