--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,13 @@
   <title>Privacy Policy – Iron Dillo</title>
   <meta name="description" content="Iron Dillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- 🛡 Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com;">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <link rel="canonical" href="https://irondillo.com/privacy.html" />
   <script src="https://cdn.tailwindcss.com"></script>
