--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <script>
   // Set this to false to disable maintenance mode
-  const maintenanceMode = true;
+  const maintenanceMode = false;
 
   if (maintenanceMode) {
     window.location.href = "maintenance.html";
@@ -26,7 +26,7 @@
 <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
 <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
 <link rel="icon" href="/assets/favicon.ico" />
-<script src="https://cdn.tailwindcss.com" defer></script>
+<script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 <style>
 @keyframes fadeIn {
