--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Tailwind CDN -->
-  <script src="https://cdn.tailwindcss.com" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     .fade-in { animation: fadeIn 1s ease-out both; }
