--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   <title>Contact | Iron Dillo Cybersecurity</title>
   
   <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   
   <!-- Google reCAPTCHA v2 -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
