--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -81,7 +81,7 @@
     <section class="bg-gray-900 py-12 text-center">
       <h2 class="text-2xl font-bold text-white mb-4">Protect Your Lindale or Tyler Business</h2>
       <p class="text-gray-300 max-w-xl mx-auto">
-        Let\'s secure your operations so you can focus on growing your business. Get in touch for a free consultation
+        Let's secure your operations so you can focus on growing your business. Get in touch for a free consultation
         and find out how Iron Dillo can defend your organization.
       </p>
       <a href="/contact.html" class="mt-6 inline-block bg-teal-500 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-teal-600 transition">Contact Me Today</a>
