--- a/terms.html
+++ b/terms.html
@@ -25,7 +25,7 @@
   <header class="text-center pt-8">
     <img loading="lazy" src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
     <h1 class="text-4xl font-extrabold text-teal-400 mb-2">Terms and Conditions</h1>
-    <p class="text-gray-400">Effective Date: [Insert Date]</p>
+    <p class="text-gray-400">Effective Date: 07/29/2025</p>
   </header>
 
   <!-- Navigation -->
