--- a/privacy.html
+++ b/privacy.html
@@ -28,40 +28,48 @@
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10 max-w-3xl mx-auto rounded-md">
-    <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
-    <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
-    <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
-    <a href="/contact.html" class="text-teal-400 hover:underline font-semibold">Contact</a>
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+    <div class="flex justify-between">
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+    </div>
   </nav>
 
   <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-4 sm:px-6 md:px-8 py-12">
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h1 class="text-3xl font-extrabold text-teal-400 mb-4">Privacy Policy</h1>
-      <p class="text-gray-400 mb-2">Effective Date: June 12, 2025</p>
+      <p class="text-gray-400 mb-4">Effective Date: June 12, 2025</p>
 
-      <p class="mb-6 text-gray-300 leading-relaxed">
-        <strong>IronDillo.com does not collect personal data</strong>: This site is built with privacy as a priority
+      <p class="text-gray-300 leading-relaxed mb-4">
+        At Iron Dillo Cybersecurity, your privacy comes first. This site is built with privacy as a priority, and we collect the minimum information necessary to provide our services.
       </p>
 
-      <ul class="list-disc list-inside space-y-2 text-gray-300 mb-6">
+      <h2 class="text-xl font-bold text-teal-400 mb-2">Information We Do Not Collect</h2>
+      <ul class="list-disc list-inside space-y-2 text-gray-300 mb-4">
         <li>No cookies</li>
         <li>No tracking scripts</li>
-        <li>No analytics</li>
+        <li>No third-party advertising</li>
+        <li>No analytics tied to your personal identity</li>
       </ul>
 
-      <p class="text-gray-300 leading-relaxed mb-4">
-        If you use the contact form, your message is sent via Formspree and may include your name, email, and message content. This is only used to reply to your inquiry. None of this is stored on Iron Dillo servers.
-      </p>
+      <h2 class="text-xl font-bold text-teal-400 mb-2">Information You Choose to Share</h2>
+      <p class="text-gray-300 mb-4">If you use the contact form, your message is securely sent via Formspree.</p>
+      <p class="text-gray-300 mb-4">This may include your name, email, and the content of your message.</p>
+      <p class="text-gray-300 mb-4">This information is used only to respond to your inquiry and is not stored on Iron Dillo servers.</p>
 
-      <p class="text-gray-300 leading-relaxed mb-4">
-        I do not share, sell, or disclose any personal information to third parties.
-      </p>
+      <h2 class="text-xl font-bold text-teal-400 mb-2">How We Handle Your Information</h2>
+      <p class="text-gray-300 mb-4">We do not sell, share, or disclose your personal information to third parties.</p>
+      <p class="text-gray-300 mb-4">We implement basic security measures to ensure messages submitted through the contact form remain private.</p>
 
-      <p class="text-gray-300 leading-relaxed">
-        Questions or concerns? Please reach out through the <a href="/index.html#contact" class="text-teal-400 underline hover:text-teal-300">contact form</a>.
-      </p>
+      <h2 class="text-xl font-bold text-teal-400 mb-2">External Services</h2>
+      <p class="text-gray-300 mb-4">Google Search Console may collect anonymized, aggregated traffic data for site performance monitoring.</p>
+      <p class="text-gray-300 mb-4">This data cannot be used to identify individual visitors.</p>
+
+      <h2 class="text-xl font-bold text-teal-400 mb-2">Your Control</h2>
+      <p class="text-gray-300">If you have questions or concerns about how your information is handled, please contact us using the <a href="/contact.html" class="text-teal-400 underline hover:text-teal-300">Contact Form</a>.</p>
     </section>
   </main>
 
